# EcoGrowFinal

./: .flutter-plugins-dependencies  README.md  pubspec.yaml
ML model/: soil_model.pkl  soil_model.py  soil_phase1_dataset.csv
android/app/src/main/kotlin/com/example/ecogrow/: MainActivity.kt
backend/: .env.example  README.md  flutter_prd.md  main.py  mongodb_setup.md  prd.md  pyproject.toml  realtime_simulator.py  seed_data.py  sensor_simulator.py  test_api.py
backend/app/: db.py  routes.py  schemas.py  users.py
frontend/: .flutter-plugins-dependencies  .gitignore  README.md  pdf_setup.md
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/lib/: main.dart  main_shell.dart
frontend/lib/config/: api_config.dart
frontend/lib/pages/: alerts_page.dart  analysis_page.dart  dashboard_page.dart  registration_page.dart  trends_page.dart
frontend/linux/: CMakeLists.txt
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
lib/: main_shell.dart
lib/pages/: alerts_page.dart  analysis_page.dart  dashboard_page.dart  login_page.dart  trends_page.dart
lib/services/: api_service.dart
lib/widgets/: leaf_loader.dart
linux/runner/: my_application.cc
test/: widget_test.dart
windows/runner/: Runner.rc  main.cpp
